@@ -51,18 +51,15 @@ const isTouchWithinSelection = (editor: Editor, e: EditorEvent<TouchEvent>) => {
   }
 };
 
-const getAnchorSpec = (editor: Editor, isTriggeredByKeyboardEvent: boolean, e: EditorEvent<TouchEvent>) => {
-  const anchorSpec = isTriggeredByKeyboardEvent ? getNodeAnchor(editor) : getPointAnchor(editor, e);
-  return {
-    bubble: Bubble.nu(0, bubbleSize, bubbleAlignments),
-    layouts,
-    overrides: {
-      maxWidthFunction: MaxWidth.expandable(),
-      maxHeightFunction: MaxHeight.expandable()
-    },
-    ...anchorSpec
-  };
-};
+const getPointAnchorSpec = (editor: Editor, e: EditorEvent<TouchEvent>) => ({
+  bubble: Bubble.nu(0, bubbleSize, bubbleAlignments),
+  layouts,
+  overrides: {
+    maxWidthFunction: MaxWidth.expandable(),
+    maxHeightFunction: MaxHeight.expandable()
+  },
+  ...getPointAnchor(editor, e)
+});
 
 const setupiOSOverrides = (editor: Editor) => {
   // iOS will change the selection due to longpress also being a range selection gesture. As such we
@@ -95,8 +92,8 @@ const setupiOSOverrides = (editor: Editor) => {
   };
 };
 
-const show = (editor: Editor, e: EditorEvent<TouchEvent>, items: MenuItems, backstage: UiFactoryBackstage, contextmenu: AlloyComponent, isTriggeredByKeyboardEvent: boolean, highlightImmediately: boolean) => {
-  const anchorSpec = getAnchorSpec(editor, isTriggeredByKeyboardEvent, e);
+const show = (editor: Editor, e: EditorEvent<TouchEvent>, items: MenuItems, backstage: UiFactoryBackstage, contextmenu: AlloyComponent, useNodeAnchor: boolean, highlightImmediately: boolean) => {
+  const anchorSpec = useNodeAnchor ? getNodeAnchor(editor) : getPointAnchorSpec(editor, e);
 
   NestedMenus.build(items, ItemResponse.CLOSE_ON_EXECUTE, backstage, true).map((menuData) => {
     e.preventDefault();
@@ -116,7 +113,7 @@ const show = (editor: Editor, e: EditorEvent<TouchEvent>, items: MenuItems, back
   });
 };
 
-export const initAndShow = (editor: Editor, e: EditorEvent<TouchEvent>, buildMenu: () => MenuItems, backstage: UiFactoryBackstage, contextmenu: AlloyComponent, isTriggeredByKeyboardEvent: boolean): void => {
+export const initAndShow = (editor: Editor, e: EditorEvent<TouchEvent>, buildMenu: () => MenuItems, backstage: UiFactoryBackstage, contextmenu: AlloyComponent, useNodeAnchor: boolean): void => {
   const detection = PlatformDetection.detect();
   const isiOS = detection.os.isiOS();
   const isOSX = detection.os.isOSX();
@@ -127,13 +124,13 @@ export const initAndShow = (editor: Editor, e: EditorEvent<TouchEvent>, buildMen
 
   const open = () => {
     const items = buildMenu();
-    show(editor, e, items, backstage, contextmenu, isTriggeredByKeyboardEvent, shouldHighlightImmediately());
+    show(editor, e, items, backstage, contextmenu, useNodeAnchor, shouldHighlightImmediately());
   };
 
   // On iOS/iPadOS if we've long pressed on a ranged selection then we've already selected the content
   // and just need to open the menu. Otherwise we need to wait for a selection change to occur as long
   // press triggers a ranged selection on iOS.
-  if ((isOSX || isiOS) && !isTriggeredByKeyboardEvent) {
+  if ((isOSX || isiOS) && !useNodeAnchor) {
     const openiOS = () => {
       setupiOSOverrides(editor);
       open();
@@ -148,7 +145,7 @@ export const initAndShow = (editor: Editor, e: EditorEvent<TouchEvent>, buildMen
   } else {
     // On Android editor.selection hasn't updated yet at this point, so need to do it manually
     // Without this longpress causes drag-n-drop duplication of code on Android
-    if (isAndroid && !isTriggeredByKeyboardEvent) {
+    if (isAndroid && !useNodeAnchor) {
       editor.selection.setCursorLocation(e.target, 0);
     }
 
