@@ -9,6 +9,7 @@ import ImageToolsPlugin from 'tinymce/plugins/imagetools/Plugin';
 import LinkPlugin from 'tinymce/plugins/link/Plugin';
 import TablePlugin from 'tinymce/plugins/table/Plugin';
 import SilverTheme from 'tinymce/themes/silver/Theme';
+import { sOpenContextMenu } from '../../../module/ContextMenuUtils';
 
 UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
   SilverTheme();
@@ -23,11 +24,6 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
 
     const doc = SugarElement.fromDom(document);
     const editorBody = SugarElement.fromDom(editor.getBody());
-
-    const sOpenContextMenu = (target) => Chain.asStep(editor, [
-      tinyUi.cTriggerContextMenu('trigger context menu', target, '.tox-silver-sink .tox-collection [role="menuitem"]'),
-      Chain.wait(0)
-    ]);
 
     // Assert focus is on the expected menu item
     const sAssertFocusOnItem = (label, selector) => FocusTools.sTryOnSelector(`Focus should be on: ${label}`, doc, selector);
@@ -92,7 +88,7 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
     Pipeline.async({}, [
       tinyApis.sFocus(),
       Log.stepsAsStep('TBA', 'Test context menus on empty editor', [
-        sOpenContextMenu('p'),
+        sOpenContextMenu(tinyUi, editor, 'p'),
         sAssertFocusOnItem('Link', '.tox-collection__item:contains("Link...")'),
         sPressEnterKey,
         sWaitForAndCloseDialog
@@ -100,7 +96,7 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
       Log.stepsAsStep('TBA', 'Test context menus on a link', [
         tinyApis.sSetContent('<p><a href="http://tiny.cloud/">Tiny</a></p>'),
         tinyApis.sSetSelection([ 0, 0, 0 ], 'Ti'.length, [ 0, 0, 0 ], 'Ti'.length),
-        sOpenContextMenu('a'),
+        sOpenContextMenu(tinyUi, editor, 'a'),
         sAssertFocusOnItem('Link', '.tox-collection__item:contains("Link...")'),
         sPressDownArrowKey,
         sAssertFocusOnItem('Remove Link', '.tox-collection__item:contains("Remove link")'),
@@ -110,14 +106,14 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
         sAssertFocusOnItem('Link', '.tox-collection__item:contains("Link...")'),
         sPressEnterKey,
         sWaitForAndCloseDialog,
-        sOpenContextMenu('a'),
+        sOpenContextMenu(tinyUi, editor, 'a'),
         sPressDownArrowKey,
         sPressEnterKey,
         sAssertRemoveLinkHtmlStructure
       ]),
       Log.stepsAsStep('TBA', 'Test context menus on a table', [
         tinyApis.sSetContent(tableHtml),
-        sOpenContextMenu('td'),
+        sOpenContextMenu(tinyUi, editor, 'td'),
         sAssertFocusOnItem('Link', '.tox-collection__item:contains("Link...")'),
         sPressDownArrowKey,
         sAssertFocusOnItem('Cell', '.tox-collection__item:contains("Cell")'),
@@ -135,7 +131,7 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
       ]),
       Log.stepsAsStep('TBA', 'Test context menus on image inside a table', [
         tinyApis.sSetContent(imageInTableHtml),
-        sOpenContextMenu('img'),
+        sOpenContextMenu(tinyUi, editor, 'img'),
         sAssertFocusOnItem('Link', '.tox-collection__item:contains("Link...")'),
         sPressDownArrowKey,
         sAssertFocusOnItem('Image', '.tox-collection__item:contains("Image")'),
@@ -155,7 +151,7 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
         sRepeatDownArrowKey(2),
         sPressEnterKey,
         sWaitForAndCloseDialog,
-        sOpenContextMenu('img'),
+        sOpenContextMenu(tinyUi, editor, 'img'),
         // Navigate to the "Image tools" menu item
         sRepeatDownArrowKey(2),
         sPressEnterKey,
@@ -163,7 +159,7 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
       ]),
       Log.stepsAsStep('TBA', 'Test context menus on link inside a table', [
         tinyApis.sSetContent(linkInTableHtml),
-        sOpenContextMenu('a'),
+        sOpenContextMenu(tinyUi, editor, 'a'),
         sAssertFocusOnItem('Link', '.tox-collection__item:contains("Link...")'),
         sPressDownArrowKey,
         sAssertFocusOnItem('Remove Link', '.tox-collection__item:contains("Remove link")'),
@@ -184,7 +180,7 @@ UnitTest.asynctest('SilverContextMenuTest', (success, failure) => {
         // Placeholder images shouldn't show the image/image tools options
         tinyApis.sSetContent(placeholderImageInTableHtml),
         tinyApis.sSelect('img', []),
-        sOpenContextMenu('img'),
+        sOpenContextMenu(tinyUi, editor, 'img'),
         sAssertFocusOnItem('Link', '.tox-collection__item:contains("Link...")'),
         sPressDownArrowKey,
         sAssertFocusOnItem('Cell', '.tox-collection__item:contains("Cell")'),
